--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:padding="70px"
     android:gravity="center"
-    android:background="#DCECC4"
+    android:background="#82BCB6"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:layout_width="match_parent"
